--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -2,6 +2,8 @@
   <h1>Listing profiles</h1>
 </div>
 
+<%= render 'profiles/search_form' %>
+
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -19,3 +21,6 @@
     </tbody>
   </table>
 </div>
+
+
+<%= will_paginate @profiles,  :previous_label => "Previous", :next_label => "Next" %>
