--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -6,6 +6,8 @@
   <h1>Listing publications</h1>
 </div>
 
+<%= render 'publications/search_form' %>
+
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -35,3 +37,5 @@
     </tbody>
   </table>
 </div>
+
+<%= will_paginate @publications,  :previous_label => "Previous", :next_label => "Next" %>
